# sunwayilabs-launchx-2025-prototype

./: .env.example  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci-cd.yml  deploy-huggingface.yml  security.yml
app/: chatbot.py  main.py  sentiment.py
app/prompts/: rogerian_prompt.txt
app/providers/: __init__.py  base.py  ilmu_stub.py  openai_provider.py
audit/: COMPLIANCE_README.md  POLICY_README.md  README.md  __init__.py  __main__.py  anchor.py  compliance.py  integration.py  policy.py
contracts/: ComplianceRegistry.sol  ConsentRegistry.sol  PolicyRegistry.sol  StorageProof.sol
data/: sample_conversations.json
privacy/: KEYBROKER_README.md  README.md  STORAGE_PROOF_README.md  __init__.py  __main__.py  consent.py  keybroker.py  storage_proof.py
scripts/: deploy_to_hf.py  setup_environment.py
tests/: test_audit.py  test_compliance.py  test_consent.py  test_keybroker.py  test_placeholder.py  test_policy.py  test_providers.py  test_storage_proof.py  test_zkml.py
zk/: README.md  __init__.py  zkml_proof.py
